# flowMC

./: .all-contributorsrc  .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  License.md  README.md  bash_commands_marylou  mkdocs.yml  pyproject.toml  readthedocs.yml  ruff.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: workflowsjoss.yml
.github/workflows/: pre-commit.yml  python-package.yml  python-publish.yml  run_tests.yml  workflowsjoss.yml
docs/: FAQ.md  anatomy.md  communityExamples.md  configuration.md  contribution.md  gen_ref_pages.py  index.md  quickstart.md  requirements.txt  summary.md  tutorials
docs/source/: FAQ.rst  analysis.rst  api.rst  conf.py  configuration.rst  contribution.rst  examples.rst  index.md  index.rst  intro.rst  nfsampler.utils.rst  quickstart.rst  tutorials
docs/source/api/: flowMC.nfmodel.rst  flowMC.rst  flowMC.sampler.rst  flowMC.utils.rst  modules.rst  nfsampler.nfmodel.rst  nfsampler.rst  nfsampler.sampler.rst  nfsampler.utils.rst
docs/source/tutorials/: analyzingChains.ipynb  dualmoon.ipynb  localKernels.ipynb  mog_pretrain.ipynb  normalizingFlow.ipynb
docs/stylesheets/: extra.css
docs/tutorials/: custom_strategy.ipynb  dualmoon.ipynb  loading_resources.ipynb  normalizingFlow.ipynb  parallel_tempering.ipynb  train_flow_match.ipynb  train_normalizing_flow.ipynb
example/: Mixture_gaussian.py  Neal_funnel.py  NonJaxLikelihood.py  dualmoon.py  dualmoon_harmonic.py  dualmoon_nfrwgaussian.py  mixture_gaussian.py  neal_funnel.py  nealfunnel_nfrwgaussian.py  non_jax_likelihood.py  train_Maf.py  train_RealNVP.py  train_normalizing_flow.py  wiggle.py
example/kepler/: kepler.py  test.py  utils.py
example/notebook/: DualMoon.ipynb  Example neal funnel.ipynb  Tutorial dual moon.ipynb  analyzingChains.ipynb  custom_strategy.ipynb  dualmoon.ipynb  maximizing_likelihood.ipynb  mog_pretrain.ipynb  normalizingFlow.ipynb
joss/: paper.bib  paper.md
nfsampler/: utils.py
nfsampler/NFmodel/: maf.py
nfsampler/nfmodel/: maf.py  realNVP.py  utils.py
nfsampler/sampler/: Gaussian_random_walk.py  MALA.py  NF_proposal.py  Sampler.py
nfsampler/utils/: PRNG_keys.py
src/: Sampler.py
src/flowMC/: Sampler.py  resource_strategy_bundles.py
src/flowMC/logger/: __init__.py  _logger.py
src/flowMC/nfmodel/: base.py  common.py  maf.py  mlp.py  realNVP.py  rqSpline.py  utils.py
src/flowMC/proposal/: Gaussian_random_walk.py  HMC.py  MALA.py  NF_proposal.py  base.py  flowHMC.py
src/flowMC/resource/: base.py  buffers.py  logPDF.py  log_pdf.py  nf_base.py  optimizer.py  states.py
src/flowMC/resource/kernel/: Gaussian_random_walk.py  HMC.py  MALA.py  NF_proposal.py
src/flowMC/resource/local_kernel/: Gaussian_random_walk.py  HMC.py  MALA.py  base.py  flowHMC.py
src/flowMC/resource/model/: NF_proposal.py  common.py  realNVP.py  rqSpline.py
src/flowMC/resource/model/flowmatching/: base.py
src/flowMC/resource/model/nf_model/: NF_proposal.py  base.py  common.py  realNVP.py  rqSpline.py
src/flowMC/resource/nf_model/: NF_proposal.py  base.py  common.py  realNVP.py  rqSpline.py
src/flowMC/resource_strategy_bundle/: RQSpline_MALA.py  RQSpline_MALA_PT.py  base.py
src/flowMC/sampler/: Gaussian_random_walk.py  HMC.py  LocalSampler_Base.py  MALA.py  NF_proposal.py  Proposal_Base.py  Sampler.py  flowHMC.py  mMALA.py
src/flowMC/strategy/: base.py  global_tuning.py  importance_sampling.py  lambda_function.py  optimization.py  parallel_tempering.py  sequential_monte_carlo.py  take_steps.py  train_model.py  update_state.py
src/flowMC/utils/: Analysis.py  EvolutionaryOptimizer.py  PRNG_keys.py  PythonFunctionWrap.py  Spline.py  __init__.py  debug.py  hyperparameters.py  postprocessing.py  progressBar.py
test/: kernel_test.py  kernel_test_old.py  old_test_proposal.py  sampler_test.py  test_HMC.py  test_MALA.py  test_RWMCMC.py  test_quickstart.py
test/integration/: test_HMC.py  test_MALA.py  test_RWMCMC.py  test_flowHMC.py  test_normalizingFlow.py  test_quickstart.py
test/unit/: test_bundle.py  test_debug.py  test_flowmatching.py  test_kernels.py  test_nf.py  test_nf_utils.py  test_realnvp.py  test_resources.py  test_rqspline.py  test_strategies.py  test_util.py
test_docs/: test_quickstart.ipynb
