[metadata]
name = flowMC
version = 0.0.10
author = Kaze Wong, Marylou Gabrié, Dan Foreman-Mackey
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/flowMC
description = Normalizing flow exhanced sampler in jax
keywords = sampling, inference, machine learning, normalizing, autodiff, jax
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax==0.4.1
    jaxlib==0.4.1
    flax==0.6.3
    tqdm
    distrax==0.1.2
    
python_requires =  >=3.8,<3.11

[options.packages.find]
where=src
