[metadata]
name = flowMC
version = 0.2.1
author = Kaze Wong, Marylou Gabrié, Dan Foreman-Mackey
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/flowMC
description = Normalizing flow exhanced sampler in jax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, machine learning, normalizing, autodiff, jax
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax==0.4.12
    jaxlib==0.4.12
    flax==0.6.10
    tqdm
    # distrax==0.1.3
    
python_requires =  >=3.8,<3.11

[options.packages.find]
where=src
