[metadata]
name = flowMC
version = 0.2.2
author = Kaze Wong, Marylou Gabrié, Dan Foreman-Mackey
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/flowMC
description = Normalizing flow exhanced sampler in jax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, machine learning, normalizing, autodiff, jax
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax>=0.4.12
    jaxlib>=0.4.12
    equinox>=0.10.6
    optax>=0.1.5
    evosax>=0.1.4
    tqdm

    
python_requires =  >=3.9

[options.packages.find]
where=src
